--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -86,6 +86,16 @@
                     <p:inputText autocomplete="off" id="txtSearch3" value="#{bookingController.selectTextSession}" style="width: 176px;margin-left: 2px;" placeholder="Session" >
                         <f:ajax  event="keyup" execute="@this" render=":#{p:component('tblSessionsOfSelectedConsultant')}" listener="#{bookingController.listnerSessionRowSelect}"/> 
                     </p:inputText>
+                    <h:outputScript>
+                        $(document.getElementById('form:txtSearch3')).keypress(function (event) {
+                        var keycode = (event.keyCode ? event.keyCode : event.which);
+                        if (keycode == '13') {
+                        document.getElementById("form:cmbPs_focus").focus();
+                        return false;
+                        }
+
+                        });
+                    </h:outputScript>
                     <p:dataTable value="#{bookingController.serviceSessions}" rowKey="#{ses.transRowNumber}"
                                  id="tblSessionsOfSelectedConsultant" var="ses"
                                  selectionMode="single" 
@@ -100,7 +110,7 @@
 
                         <p:column id="colText" headerText="Session" style="text-wrap: none;"  rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Ruhuna'}">
                             <h:outputFormat value="#{ses.sessionText}" escape="false" ></h:outputFormat>
-                            
+
                             <br/>
 
                             <h:outputText value="#{ses.sessionDate}" rendered="#{!ses.deactivated}">
@@ -246,13 +256,25 @@
                             </h:panelGroup>
 
                             <p:outputLabel value="Payment Method"/>
-                            <p:selectOneMenu  id="cmbPs" value="#{channelBillController.paymentMethod}">  
-                                <f:selectItem itemLabel="Select Payment Method" ></f:selectItem>
-                                <f:selectItems value="#{enumController.paymentMethodsForChannel}"/>                                                               
-                                <f:ajax execute="@this" render="agent agent2 ballance ballance2 agRefLbl agRefTxt creditCardSlc creditCardbnkLbl 
-                                        creditCardTxt creditCardRef slipLblBank slipSelBank slipLblDate date staff autoStaff lblCheque chequNo lblBank 
-                                        lblChequeDate ChequeDate bankSel :#{p:component('lblSessionTotal')} :#{p:component('tblSessionsOfSelectedConsultant')}" event="change" listener="#{bookingController.generateSessions}" />
-                            </p:selectOneMenu>
+                            <h:panelGroup >
+                                <p:selectOneMenu  id="cmbPs" value="#{channelBillController.paymentMethod}">  
+                                    <f:selectItem itemLabel="Select Payment Method" ></f:selectItem>
+                                    <f:selectItems value="#{enumController.paymentMethodsForChannel}"/>                                                               
+                                    <f:ajax execute="@this" render="agent agent2 ballance ballance2 agRefLbl agRefTxt creditCardSlc creditCardbnkLbl 
+                                            creditCardTxt creditCardRef slipLblBank slipSelBank slipLblDate date staff autoStaff lblCheque chequNo lblBank 
+                                            lblChequeDate ChequeDate bankSel :#{p:component('lblSessionTotal')} :#{p:component('tblSessionsOfSelectedConsultant')}" event="change" listener="#{bookingController.generateSessions}" />
+                                </p:selectOneMenu>
+                                <h:outputScript>
+                                    $(document.getElementById('form:cmbPs_focus')).keypress(function (event) {
+                                    var keycode = (event.keyCode ? event.keyCode : event.which);
+                                    if (keycode == '13') {
+                                    document.getElementById("form:cmbPs_focus").focus();
+                                    return false;
+                                    }
+
+                                    });
+                                </h:outputScript>
+                            </h:panelGroup>
                             <p:outputLabel value="Discount Scheme"/>
                             <p:selectOneMenu   id="cmbPs2" value="#{channelBillController.paymentScheme}">     
                                 <f:selectItem itemLabel="Select Discount Scheme"/>
@@ -355,7 +377,7 @@
                         <p:tab id="tabNewPt" title="New Pateint">
                             <h:panelGrid columns="2">
                                 <h:outputLabel value="Title"/>
-                                <p:selectOneMenu  value="#{channelBillController.newPatient.person.title}"  >
+                                <p:selectOneMenu id="somNewPtTitle" value="#{channelBillController.newPatient.person.title}"  >
                                     <f:selectItem itemLabel="Select Title"/>
                                     <f:selectItems value="#{billController.title}"/>
                                 </p:selectOneMenu>
