Signed-off-by: Buddhika <buddhika.ari@gmail.com>

--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -268,7 +268,7 @@
                                     $(document.getElementById('form:cmbPs_focus')).keypress(function (event) {
                                     var keycode = (event.keyCode ? event.keyCode : event.which);
                                     if (keycode == '13') {
-                                    document.getElementById("form:cmbPs_focus").focus();
+                                    document.getElementById("form:tabViewPatientDetails:somNewPtTitle_focus").focus();
                                     return false;
                                     }
 
