--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -109,11 +109,7 @@
                                 listener="#{bookingController.fillBillSessions}" />
 
                         <p:column id="colText" headerText="Session" style="text-wrap: none;"  rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Ruhuna'}">
-                            <h:outputFormat value="#{ses.sessionText}" escape="false" ></h:outputFormat>
-
-                            <br/>
-
-                            <h:outputText value="#{ses.sessionDate}" rendered="#{!ses.deactivated}">
+                           <h:outputText value="#{ses.sessionDate}" rendered="#{!ses.deactivated}">
                                 <f:convertDateTime pattern="E"/>
                             </h:outputText>
                             <h:outputText value=" &nbsp;&nbsp;" rendered="#{!ses.deactivated}" />
@@ -267,8 +263,9 @@
                                 <h:outputScript>
                                     $(document.getElementById('form:cmbPs_focus')).keypress(function (event) {
                                     var keycode = (event.keyCode ? event.keyCode : event.which);
+                                    alert("sdf");
                                     if (keycode == '13') {
-                                    document.getElementById("form:tabViewPatientDetails:somNewPtTitle_focus").focus();
+                                    document.getElementById("form:txtSearch3").focus();
                                     return false;
                                     }
 
