Signed-off-by: Buddhika <buddhika.ari@gmail.com>

--- a/src/main/webapp/channel/channel_attandance.xhtml
+++ b/src/main/webapp/channel/channel_attandance.xhtml
@@ -208,7 +208,7 @@
                         </h:outputText>
                         <h:outputText value="." ></h:outputText>
                         <br/>
-                        <h:outputText value="Left AT " ></h:outputText>
+                        <h:outputText value="LEFT AT " ></h:outputText>
                         <h:outputText value="#{bookingController.arrivalRecord.approvedAt}" >
                             <f:convertDateTime pattern="hh:mm a" >
                             </f:convertDateTime>
