Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/channel/channel_doctor_leave.xhtml
+++ b/src/main/webapp/channel/channel_doctor_leave.xhtml
@@ -28,7 +28,7 @@
                     </h:panelGrid>
                 </p:panel>
 
-                <p:dataTable id="tbl" value="#{serviceSessionLeaveController.items}" var="d" rowStyleClass="#{d.retired ? 'crossLine':''}" >
+                <p:dataTable id="tbl" value="#{serviceSessionLeaveController.serviceSessionLeaves}" var="d" rowStyleClass="#{d.retired ? 'crossLine':''}" >
                     <p:column>
                         <h:outputLabel value="#{d.sessionDate}">
                             <f:convertDateTime parent="YYYY MM dd" />
