--- a/src/main/webapp/hr/hr_shift_table_finger_print_by_staff.xhtml
+++ b/src/main/webapp/hr/hr_shift_table_finger_print_by_staff.xhtml
@@ -133,22 +133,22 @@
                     <p:column headerText="Time" styleClass="fixedColumn100">
                         <h:panelGroup id="lblShiftDate" >
                             <h:outputLabel value="#{sts.shiftStartTime}" >
-                                <f:convertDateTime pattern="h:mm a" ></f:convertDateTime>
+                                <f:convertDateTime pattern="h:mm:ss a" ></f:convertDateTime>
                             </h:outputLabel>
                             <h:outputLabel value=" - " ></h:outputLabel>
                             <h:outputLabel value="#{sts.shiftEndTime}" >
-                                <f:convertDateTime pattern="h:mm a" ></f:convertDateTime>
+                                <f:convertDateTime pattern="h:mm:ss a" ></f:convertDateTime>
                             </h:outputLabel>
                         </h:panelGroup>
                         <p:tooltip for="lblShiftDate" >
                             <h:outputLabel value="From : " ></h:outputLabel>
                             <h:outputLabel value="#{sts.shiftStartTime}" >
-                                <f:convertDateTime pattern="dd MMM yyyy hh:mm a" ></f:convertDateTime>
+                                <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss a" ></f:convertDateTime>
                             </h:outputLabel>
                             <br/>
                             <h:outputLabel value="To : " ></h:outputLabel>
                             <h:outputLabel value="#{sts.shiftEndTime}" >
-                                <f:convertDateTime pattern="dd MMM yyyy hh:mm a" ></f:convertDateTime>
+                                <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss a" ></f:convertDateTime>
                             </h:outputLabel>
                             <br/>
                             <h:outputLabel value="Date : " ></h:outputLabel>
