--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -83,7 +83,7 @@
                                 <p:panel header="Payment Report" style="width: 400px;margin: auto;"  toggleable="true">  
                                     <h:panelGrid columns="1">
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Payment Report" action="/channel/channel_payment_report"/>
-                                        
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Payment Report By Session" action="/channel/channel_payment_report_by_session"/>
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
