Channel Bill Number Changes Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_report_by_bill_class.xhtml
+++ b/src/main/webapp/channel/channel_report_by_bill_class.xhtml
@@ -72,6 +72,7 @@
                                     <p:outputLabel value="Bill Number" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.insId}" />
+                                <p:outputLabel value=" - #{b.paidBill.insId}" rendered="#{b.paidBill ne b}" />
                             </p:column>
                             <p:column style="text-align: right;" >
                                 <f:facet name="header" >
