--- a/src/main/webapp/resources/channel/channelRecipt.xhtml
+++ b/src/main/webapp/resources/channel/channelRecipt.xhtml
@@ -181,7 +181,7 @@
                                         </td>
                                         <td>
                                             <b>
-                                                <h:outputLabel value="#{cc.attrs.bill.insId}" >
+                                                <h:outputLabel value="#{cc.attrs.bill.paidBill.insId}" >
                                                 </h:outputLabel>
                                             </b>
                                         </td>
