--- a/src/main/webapp/channel/channel_report_agent_balance.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_balance.xhtml
@@ -22,7 +22,7 @@
                 </f:facet>
                 <h:panelGrid>
                     <h:panelGrid columns="3" >
-                        <p:commandButton value="Fill" ajax="false" ></p:commandButton> 
+                        <p:commandButton value="Fill" action="#{channelReportTempController.createAgencyBalanceTable()}" ajax="false" ></p:commandButton> 
                         <p:commandButton ajax="false" value="Print" styleClass="noPrintButton">
                             <p:printer target="reportPrint"  />
                         </p:commandButton>
@@ -32,7 +32,7 @@
                     </h:panelGrid> 
                 </h:panelGrid>
                 <p:panel id="reportPrint" styleClass="summeryBorder noBorder">
-                    <p:dataTable value="#{institutionController.agencies}" var="a" id="tbl1" rowIndexVar="i">
+                    <p:dataTable value="#{channelReportTempController.agencies}" var="a" id="tbl1" rowIndexVar="i">
                         <f:facet name="header">
                             <p:outputLabel value="#{sessionController.loggedUser.institution.name}" />
                             <br></br>
