--- a/src/main/webapp/channel/channel_payment_report_by_session.xhtml
+++ b/src/main/webapp/channel/channel_payment_report_by_session.xhtml
@@ -24,9 +24,28 @@
 
                         <h:outputLabel value="To Date"/>
                         <p:calendar id="toDate" value="#{channelReportController.toDate}" navigator="true" pattern="dd MMMM yyyy HH:mm:ss" ></p:calendar>
-                    
+
                         <h:outputLabel value="Consultant"/>
-                        <au:completeConsultant value="#{channelReportController.staff}"/>
+                        <p:autoComplete minQueryLength="2"  style="width: 400px;"
+                                        forceSelection="true" 
+                                        value="#{channelReportController.staff}" id="scStaff"
+                                        completeMethod="#{staffController.completeConsultant}" var="mys" 
+                                        itemLabel="#{mys.person.nameWithTitle}" 
+                                        itemValue="#{mys}"
+                                        converter="stfcon">
+                            
+                            <p:ajax event="itemSelect" update="lstSelect" process="scStaff"  
+                                    listener="#{channelReportController.fillSessions}"></p:ajax>
+                        </p:autoComplete>
+
+                        <p:outputLabel value="Session" />
+                        <p:selectOneMenu  id="lstSelect" converter="sscon"  
+                                          value="#{channelReportController.serviceSession}" style="min-width: 100%;" >
+                            <f:selectItem itemLabel="Select"  ></f:selectItem>
+                            <f:selectItems  value="#{channelReportController.serviceSessions}" var="ses" 
+                                            itemValue="#{ses}" 
+                                            itemLabel="#{ses.name}" ></f:selectItems>
+                        </p:selectOneMenu>
                     </h:panelGrid>
                     <h:panelGrid columns="4"> 
                         <p:commandButton ajax="false" id="btnRefresh" value="Process Created Date" action="#{channelReportController.createChannelDoctorPaymentTableBySession}">
