Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -85,9 +85,11 @@
                                     <h:panelGrid columns="1">
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Payment Report" action="/channel/channel_payment_report"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Payment Report By Session" action="/channel/channel_payment_report_by_session"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Payment Report By Session Date" action="/channel/channel_payment_report_by_date"/>
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
+                            
                             
                             <h:panelGrid columns="1">
                                 <p:panel header="Absent Report" style="width: 400px;margin: auto;"  toggleable="true">  
